<resources>
    <string name="app_tag">flexiclist</string>
    <string name="app_name">FlexiCList</string>
    <string name="app_label">FlexiCList</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="ok">OK</string>
    <string name="cancel">Canel</string>

    <string name="action_settings">Settings</string>
    <string name="action_create">Create new checklist</string>
    <string name="action_export_file">Export checklist to file</string>
    <string name="action_import_file">Import checklist from file</string>
    <string name="action_import_url">Import checklist from URL</string>
    <string name="no_checklist">No checklists found.</string>
    <string name="not_implemented_title">Not implemented yet</string>
    <string name="not_implemented_url">Download checklist by URL not implemented yet</string>
    <string name="not_implemented_export">Export to file not implemented yet</string>

    <string name="remove_cl">Remove checklist</string>
    <string name="remove_cl1">Remove \"</string>
    <string name="remove_cl2">\" checklist (\"</string>
    <string name="remove_cl3">\" file). Are you sure?</string>

    <string name="editor_layout_save">Save</string>
    <string name="editor_layout_cancel">Cancel</string>
    <string name="editor_openerr_title">Open failure</string>
    <string name="editor_openerr_txt1">Can\'t open file \"</string>
    <string name="editor_openerr_txt2">\" for writting</string>
    <string name="editor_writeerr_title">Write failure</string>
    <string name="editor_writeerr_txt">Can\'t write to file \"</string>
    <string name="editor_closeerr_title">Close failure</string>
    <string name="editor_closeerr_txt">Can\'t close file \"</string>

    <string name="item_back_txt">BACK</string>

    <string name="empty_directory">Empty Directory</string>
    <string name="storage_removed">Storage was removed or unmounted.</string>
    <string name="choose_file">Select a file</string>
    <string name="error_selecting_file">Error selecting File</string>
    <string name="internal_storage">Internal storage</string>

    <string name="create_new_title">Create new</string>
    <string name="already_exists_title">Already exists</string>
    <string name="already_exists_text">Checklist with this name already exists</string>
    <string name="nothing_to_set_title">Nothing to set</string>
    <string name="nothing_to_set_text">Nothing to set meanwhile. If you have an idea - leave me issue on https://github.com/yiselieren/flexiclist </string>
</resources>
