<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.yiselieren.flexiclist.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_export_file"
        android:orderInCategory="100"
        android:title="@string/action_export_file"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_import_file"
        android:orderInCategory="100"
        android:title="@string/action_import_file"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_import_url"
        android:orderInCategory="100"
        android:title="@string/action_import_url"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_create"
        android:orderInCategory="100"
        android:title="@string/action_create"
        app:showAsAction="never" />
</menu>
